参考-python-script/vm_clone20171226.tar/vm_clone20171226/vm_clone/init_99bill/iptables
# Generated by iptables-save v1.3.5 on Wed Oct 24 00:15:23 2012
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:140]
:POSTROUTING ACCEPT [1:140]
COMMIT
# Completed on Wed Oct 24 00:15:23 2012
# Generated by iptables-save v1.3.5 on Wed Oct 24 00:15:23 2012
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [1:140]
:OUTPUT ACCEPT [1:140]
COMMIT
# Completed on Wed Oct 24 00:15:23 2012
# Generated by iptables-save v1.3.5 on Wed Oct 24 00:15:23 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PING - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW -j PING
-A INPUT -i lo -j ACCEPT
-A INPUT -s 127.0.0.0/255.0.0.0 -i ! lo -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -s 10.11.0.0/16 -p tcp -m state --state NEW -m tcp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
